Add swagger definitions (#62)
* add basic field definition for getAll

* update isProfileOwner to check the id when there are two params, add the middleware to reservation routes for adding and withdrwaring a player from the reservation

* add basic definitions to swagger.js
